--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -42,6 +44,8 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
+    "homepage": "https://CrazyDream000.github.io/countries_catalog",
     "tailwindcss": "^3.3.2"
   }
 }
